# vector_flow_connect

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vector_flow_connect/: __init__.py  extraction_contract.py
src/vector_flow_connect/action_log/: __init__.py  loader.py
src/vector_flow_connect/alpaca/: __init__.py  _base.py  _session.py  assets.py  bars.py  corp_actions.py  news.py  occ.py  options.py  positions.py  settings.py
src/vector_flow_connect/amac/: _selectors.py  browser_client.py  bulk.py  client.py  lookup.py  merge.py  parse.py  recon.py  schema.py  state.py
src/vector_flow_connect/dku/: __init__.py
src/vector_flow_connect/dku/action_log/: canonical.py  loader.py  validate.py
src/vector_flow_connect/dku/master_record/: _inherited_canonical_contract.py  annualized.py  canonical.py  events_sheet.py  reconcile.py  snapshot.py  workbook.py
src/vector_flow_connect/dku/returns_calc/: __init__.py  canonical.py  ledger.py  workbook.py
src/vector_flow_connect/manager_reports/: __init__.py  audit.py  canonical.py  completeness.py  lot_attribution.py  name_normalize.py  prompts.py  render.py
src/vector_flow_connect/master_record/: __init__.py  _inherited_canonical_contract.py  _inherited_fund_resolver.py  canonical.py  events_sheet.py  notes_parser.py  reconcile.py  snapshot.py  workbook.py
src/vector_flow_connect/pdf/: _inherited_canonical.py  canonical.py  completeness.py  inventory.py  llm_client.py  mapping.py  multifund.py  runner.py  schema.py
src/vector_flow_connect/polygon/: __init__.py  _client.py  bars.py  corp_actions.py  settings.py
tests/: test_alpaca_assets.py  test_alpaca_bars.py  test_alpaca_corp_actions.py  test_alpaca_news.py  test_alpaca_options.py  test_alpaca_positions.py  test_env_proxy_hygiene.py  test_occ.py  test_polygon_bars.py  test_polygon_corp_actions.py
tests/action_log/: test_loader.py  test_validate.py
tests/amac/: test_browser_client_live.py  test_bulk.py  test_bulk_live.py  test_client.py  test_lookup_live.py  test_merge.py  test_parse.py  test_schema.py  test_state.py
tests/amac/fixtures/: detail_page.html  search_response.json
tests/dku/action_log/: test_loader.py  test_validate.py
tests/dku/master_record/: test_canonical.py  test_events_sheet.py  test_notes_parser.py  test_reconcile_incomplete_units.py  test_reconcile_share_class.py  test_resolve_as_of.py  test_snapshot_phantom_row.py  test_workbook_path_a_vs_b.py
tests/dku/returns_calc/: test_ledger.py
tests/fixtures/action_log/: synthetic_action_log.csv
tests/fixtures/master_record/: _generate_synthetic.py  synthetic_workbook.xlsx
tests/manager_reports/: test_audit.py  test_lot_attribution.py  test_mapping.py  test_multifund.py
tests/master_record/: test_canonical.py  test_events_sheet.py  test_notes_parser.py  test_snapshot_phantom_row.py  test_workbook_path_a_vs_b.py
tests/pdf/: test_audit.py  test_lot_attribution.py  test_mapping.py  test_multifund.py
tests/pdf/fixtures/: ruiyuan_2026_04_30_payload.json
