[project]
name = "vector-flow-connect"
version = "0.5.0"
description = "Shared vendor-API connectors (shape coercion only) for prism + quant_hive"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "alpaca-py>=0.31",
    "pydantic>=2.10",
    "pandas>=2.2",
    # v0.4.0 — AMAC private-fund registry scraper subpackage
    # (`vector_flow_connect.amac`). `httpx` powers the JSON list-page
    # client; `playwright` powers the Chromium-driven detail fetcher;
    # `pyarrow` is the parquet sink used by the bulk crawler's merge
    # step.
    "httpx>=0.27",
    "playwright>=1.40",
    "pyarrow>=15",
    # v0.5.0 — DKU PDF extractor subpackage (`vector_flow_connect.pdf`).
    # `anthropic` is the LLM client (Sonnet tool-use); `pdfplumber` does
    # text-layer extraction for multifund detection + audit; `pypdfium2`
    # + `Pillow` render PDF pages to JPEG for vision-input. Lifted from
    # dkup by plan 0038 per the binding prism-vfc split-rule.
    "anthropic>=0.40",
    "pdfplumber>=0.11",
    "pypdfium2>=4.30",
    "Pillow>=10",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vector_flow_connect"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# v0.4.0 — the AMAC subpackage parses Chinese 私募-fund HTML which
# uses fullwidth characters (：, （, ）, ×) that are SEMANTICALLY
# DISTINCT from their ASCII counterparts. RUF001/002/003 flag them
# as ambiguous; in this module they're intentional and load-bearing
# (parser logic matches the exact characters AMAC emits).
"src/vector_flow_connect/amac/*" = ["RUF001", "RUF002", "RUF003"]
"tests/amac/*" = ["RUF001", "RUF002", "RUF003"]
# v0.5.0 — the PDF subpackage's prompts + parser logic match exact
# Chinese characters in 私募 fund-manager monthly PDFs; same
# load-bearing-fullwidth-char reasoning as AMAC.
"src/vector_flow_connect/pdf/*" = ["RUF001", "RUF002", "RUF003"]
"tests/pdf/*" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"

# v0.4.0 — the AMAC subpackage's `AMACRecord` TypedDict declares
# `total=False` (all fields optional) which surfaces
# `reportTypedDictNotRequiredAccess` warnings at every key access.
# Tests use dict literals against the TypedDict which trips
# `reportArgumentType`. Relaxing here keeps the lift faithful per
# `PRISM_HANDOFF.md §8` "Don't refactor during the move."
[[tool.pyright.executionEnvironments]]
root = "src/vector_flow_connect/amac"
reportTypedDictNotRequiredAccess = "none"
reportArgumentType = "warning"

[[tool.pyright.executionEnvironments]]
root = "tests/amac"
reportTypedDictNotRequiredAccess = "none"
reportArgumentType = "warning"
reportOptionalMemberAccess = "warning"

# v0.5.0 — the PDF subpackage relies heavily on pandas + pdfplumber +
# pypdfium2 + anthropic SDK objects whose stubs either don't exist or
# are loose around dynamic attribute access. The lifted code is
# behavior-verified by the test suite (lifted from dkup); pyright noise
# here is type-stub fidelity, not logic correctness. Relax in the same
# spirit as the AMAC overrides — matches `PRISM_HANDOFF.md §8` "Don't
# refactor during the move."
[[tool.pyright.executionEnvironments]]
root = "src/vector_flow_connect/pdf"
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportReturnType = "warning"
reportOperatorIssue = "warning"
reportOptionalOperand = "warning"
reportMissingTypeStubs = "none"

[[tool.pyright.executionEnvironments]]
root = "tests/pdf"
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportReturnType = "warning"
reportOperatorIssue = "warning"
reportOptionalOperand = "warning"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
